<resources>
    <string name="app_name">UVideos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_database">View Database</string>

    <string name="hint_search">Search YouTube</string>
    <string name="label_search">Search</string>

    <string name="menu_home">Home(Search YouTube Videos)</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_musics">Musics</string>
    <string name="menu_news">News</string>
    <string name="menu_live">Live</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_player">Player</string>
    <string name="title_activity_database">View Database</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="fields_groups">
        <item>id</item>
        <item>name</item>
        <item>descriptions</item>
    </string-array>
    <string-array name="fields_catagory">
        <item>id</item>
        <item>name</item>
        <item>descriptions</item>
    </string-array>
    <string-array name="fields_videos">
        <item>id</item>
        <item>videoid</item>
        <item>title</item>
        <item>groupid</item>
        <item>catagoryid</item>
        <item>descriptions</item>
        <item>thumbnailurl</item>
    </string-array>

    <string name="title_videos">Videos</string>
    <string name="title_musics">Musics</string>
    <string name="title_news">News</string>
    <string name="title_live">Live Channels</string>

    <string name="text_groups">Groups</string>
    <string name="text_catagory">Catagory</string>
    <string name="text_videos">Videos</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="new_groups_name">New Group Name</string>
</resources>