<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_musics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_musics" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_live" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_exit" />

    </group>

</menu>
